2008-07-22  Mirco Bauer <meebey@meebey.net> 

	* Makefile.am: Distribute and install .exe.config files.

2008-07-22  Mirco Bauer <meebey@meebey.net> 

	* Frontend.cs: Disabled splashscreen (we have no current logo anyhow).

2008-07-22  Mirco Bauer <meebey@meebey.net> 

	* Makefile.am, Main.cs, Frontend-GNOME.mdp, AssemblyInfo.cs.in,
	  AssemblyInfo.cs: Made debug logging an explicit command line parameter
	  (closes trac bug#59).

2008-07-22  Mirco Bauer <meebey@meebey.net> 

	* Entry.cs: Pass "/window close" to IProtocolManager.CloseChat() instead of
	  doing nothing (before it was a disabled protocol specific hack) (closes
	  trac bug #67).

2008-07-17  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs: Bumped version to 0.6.0.

2008-07-17  Mirco Bauer <meebey@meebey.net> 

	* MainWindow.cs: Added close chat menu item.
	* Chats/ChatView.cs: Made Close() method public.
	
	  Removed accelerator from Close menu item, MainWindow handles this now.

2008-07-17  Mirco Bauer <meebey@meebey.net> 

	* Preferences/ServerView.cs: glade3 renamed some widgets because of a
	  conflict ignoring the fact that it those have different toplevel widgets

2008-07-17  Mirco Bauer <meebey@meebey.net> 

	* Entry.cs: Reset cursor position to the end when going up in the command
	  history.

2008-07-17  Mirco Bauer <meebey@meebey.net> 

	* Frontend.cs: Don't rely on Application.Quit(), call Environment.Quit()
	  afterwards to be sure we are quitting.

2008-07-17  Mirco Bauer <meebey@meebey.net> 

	* MainWindow.cs, EngineManagerDialog.cs, FirstStartDruid.cs,
	  Frontend-GNOME.mdp, EngineDruid.cs, NewEngineDruid.cs: Renamed
	  NewEngineDruid to EngineDruid.
	
	  Implemented edit mode of EngineDruid (closes trac bug #14).
	* SteticPreferencesDialog.cs: Added license header.

2008-07-16  Mirco Bauer <meebey@meebey.net> 

	* MainWindow.cs, Frontend.cs, Preferences/PreferencesDialog.cs,
	  Chats/GroupChatView.cs, Chats/ChatView.cs, Entry.cs, ChatViewManager.cs: