@@ -130,7 +130,7 @@ namespace Smuxi.Frontend.Gnome
 #endif
             }
             
-            // output
+            // topic
             Gtk.VBox vbox = new Gtk.VBox();
             string topic_pos = (string)Frontend.UserConfig["Interface/Notebook/Channel/TopicPosition"];
             if (topic_pos == "top" || topic_pos == "bottom") {
@@ -393,29 +393,8 @@ namespace Smuxi.Frontend.Gnome
                 _TopicEntry.ModifyText(Gtk.StateType.Normal);
             }
             
-            string fontFamily = (string) config["Interface/Chat/FontFamily"];
-            string fontStyle = (string) config["Interface/Chat/FontStyle"];
-            int fontSize = 0;
-            if (config["Interface/Chat/FontSize"] != null) {
-                fontSize = (int) config["Interface/Chat/FontSize"];
-            }
-            Pango.FontDescription fontDescription = new Pango.FontDescription();
-            if (!String.IsNullOrEmpty(fontFamily)) {
-                fontDescription.Family = fontFamily;
-                string frontWeigth = null;
-                if (fontStyle.Contains(" ")) {
-                    int pos = fontStyle.IndexOf(" ");
-                    frontWeigth = fontStyle.Substring(0, pos);
-                    fontStyle = fontStyle.Substring(pos + 1);
-                }
-                fontDescription.Style = (Pango.Style) Enum.Parse(typeof(Pango.Style), fontStyle);
-                if (frontWeigth != null) {
-                    fontDescription.Weight = (Pango.Weight) Enum.Parse(typeof(Pango.Weight), frontWeigth);
-                }
-                fontDescription.Size = fontSize * 1024;
-            }
-            _PersonTreeView.ModifyFont(fontDescription);
-            _TopicEntry.ModifyFont(fontDescription);
+            _PersonTreeView.ModifyFont(FontDescription);
+            _TopicEntry.ModifyFont(FontDescription);
         }
 
         private void _RenderPersonIdentityName(Gtk.TreeViewColumn column,
